[package]
name = "smallest-enclosing-h3"
version = "0.1.0"
edition = "2021"

[dependencies]
geo 		= "0"
h3o 		= "0"
thiserror 	= "1"

# Optional dependencies for export features
geojson 	= { version = "0", optional = true }
serde_json 	= { version = "1", optional = true }

[features]
geojson_export 		= [ "dep:geojson", "dep:serde_json" ]
